--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8"> 
+        <meta charset="UTF-8">
         <script>
             function hit(passage, question){
                 var xhr = new XMLHttpRequest();
@@ -13,7 +13,7 @@
                         var json = JSON.parse(xhr.responseText);
                         console.log(json.answer);
                         var ans = document.getElementById("answer");
-                        ans.innerHTML = ans;
+                        ans.innerHTML = xhr.response;
                     }
                 };
                 var params = JSON.stringify({"question": question, "passage": passage});
@@ -39,7 +39,7 @@
                 var para = document.getElementById("passage");
                 var ques = document.getElementById("question");
                 console.log("hitting");
-                hit(passage, question);
+                hit(para.value, ques.value);
 
             };
         </script>
