--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8"> 
         <script>
             function hit(passage, question){
                 var xhr = new XMLHttpRequest();
@@ -13,7 +13,7 @@
                         var json = JSON.parse(xhr.responseText);
                         console.log(json.answer);
                         var ans = document.getElementById("answer");
-                        ans.innerHTML = xhr.response;
+                        ans.innerHTML = json.answer;
                     }
                 };
                 var params = JSON.stringify({"question": question, "passage": passage});
@@ -25,6 +25,7 @@
             body{
                 display: grid;
                 grid-template-columns: 7fr 3fr;
+                grid-template-rows: 9fr 1fr;
             }
         </style>
     </head>
